k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  namespace: backstage
  
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - backstage.xgandax.cloud
    secretName: backstage-tls

  rules:
    - host: backstage.xgandax.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage
                port:
                  number: 80
